--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:tabIconTint="@drawable/tab_icon_selector"
-                app:tabTextColor="@color/movie_pink_900"/>
+                app:tabTextColor="@drawable/tab_text_selector"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
