--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -32,6 +32,7 @@
     </data>
 
     <com.github.psm.movies.view.CustomCardView
+        android:elevation="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -66,7 +67,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="@{movie.title}"
                 android:textAlignment="center"
-                android:textAppearance="?android:attr/textColorPrimary"
+                android:textAppearance="?attr/textAppearanceListItem"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
